--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "preact": "^10.13.2",
     "preact-router": "^4.1.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.5.0",
     "socket.io-client": "^4.6.2"
   },
   "devDependencies": {
