--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "preact": "^10.13.2",
     "preact-router": "^4.1.1",
+    "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.5.0",
+    "react-hook-form": "^7.44.3",
     "socket.io-client": "^4.6.2"
   },
   "devDependencies": {
